// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button has to accept theming 1`] = `
<button
  class="sc-bdfBwQ byDvvT"
>
  Button Label
</button>
`;

exports[`Button has to be rendered 1`] = `
<button
  class="sc-bdfBwQ cEPqTn"
>
  Button Label
</button>
`;
